<resources>
    <string name="app_name">Mi Aguinaldo</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="MonedaSimboloGs">Gs</string>
    <string name="Enero">Enero</string>
    <string name="Febrero">Febrero</string>
    <string name="Marzo">Marzo</string>
    <string name="Abril">Abril</string>
    <string name="Mayo">Mayo</string>
    <string name="Junio">Junio</string>
    <string name="Julio">Julio</string>
    <string name="Agosto">Agosto</string>
    <string name="Septiembre">Septiembre</string>
    <string name="Octubre">Octubre</string>
    <string name="Noviembre">Noviembre</string>
    <string name="Diciembre">Diciembre</string>
    <string name="Cero">0</string>
    <string name="TituloSueldos">Indicar sueldo percibido mensualmente</string>
    <string name="SeleccionPaises">Seleccione su país</string>
</resources>