<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SueldoMesesFragment">

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/TituloSueldos"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="wrap_content"
        android:layout_height="480dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="100dp"
        android:scrollbars="vertical"
        android:shrinkColumns="0"
        android:stretchColumns="1"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView21">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvEnero"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:gravity="right|end"
                    android:text="@string/Enero"
                    android:textColor="@color/texto_primario"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etEnero"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:ems="10"
                    android:gravity="end"
                    android:hint="@string/Cero"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:textColorHint="@color/hint_text_color" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvFebrero"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:gravity="right|end"
                    android:text="@string/Febrero"
                    android:textColor="@color/texto_primario"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextNumberDecimal2"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:ems="10"
                    android:gravity="right|end"
                    android:hint="@string/Cero"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:textColorHint="@color/hint_text_color" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:gravity="right|end"
                    android:text="@string/Marzo"
                    android:textColor="@color/texto_primario"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextNumberDecimal3"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:ems="10"
                    android:gravity="end"
                    android:hint="@string/Cero"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:textColorHint="@color/hint_text_color" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:gravity="right|end"
                    android:text="@string/Abril"
                    android:textColor="@color/texto_primario"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextNumberDecimal12"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:ems="10"
                    android:gravity="end"
                    android:hint="@string/Cero"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:textColorHint="@color/hint_text_color" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:gravity="right|end"
                    android:text="@string/Mayo"
                    android:textColor="@color/texto_primario"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextNumberDecimal11"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:ems="10"
                    android:gravity="right|end"
                    android:hint="@string/Cero"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:textColorHint="@color/hint_text_color" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:gravity="right|end"
                    android:text="@string/Junio"
                    android:textColor="@color/texto_primario"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextNumberDecimal10"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:ems="10"
                    android:gravity="end"
                    android:hint="@string/Cero"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:textColorHint="@color/hint_text_color" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:gravity="right|end"
                    android:text="@string/Julio"
                    android:textColor="@color/texto_primario"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextNumberDecimal9"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:ems="10"
                    android:gravity="end"
                    android:hint="@string/Cero"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:textColorHint="@color/hint_text_color" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:gravity="right|end"
                    android:text="@string/Agosto"
                    android:textColor="@color/texto_primario"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextNumberDecimal8"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:ems="10"
                    android:gravity="right|end"
                    android:hint="@string/Cero"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:textColorHint="@color/hint_text_color" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:gravity="right|end"
                    android:text="@string/Octubre"
                    android:textColor="@color/texto_primario"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextNumberDecimal7"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:ems="10"
                    android:gravity="right|end"
                    android:hint="@string/Cero"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:textColorHint="@color/hint_text_color" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:gravity="right|end"
                    android:text="@string/Noviembre"
                    android:textColor="@color/texto_primario"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextNumberDecimal6"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:ems="10"
                    android:gravity="end"
                    android:hint="@string/Cero"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:textColorHint="@color/hint_text_color" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:gravity="right|end"
                    android:text="@string/Diciembre"
                    android:textColor="@color/texto_primario"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextNumberDecimal5"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:ems="10"
                    android:gravity="end"
                    android:hint="@string/Cero"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:textColorHint="@color/hint_text_color" />

            </TableRow>
        </TableLayout>
    </ScrollView>

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="76dp"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>