<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">

    <ScrollView
        android:id="@+id/scrollView"
        ads:layout_constraintBottom_toTopOf="@+id/adView1"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintHorizontal_bias="1.0"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toBottomOf="@+id/horizontalScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView21">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvEnero"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Enero"
                    android:textColor="@color/textoPrimario"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etEnero"
                    android:layout_width="230dp"
                    android:layout_height="48dp"
                    android:ems="10"
                    android:gravity="right"
                    android:hint="@string/Cero"
                    android:inputType="numberDecimal" />

                <TextView
                    android:id="@+id/tvMonedaSimbolo1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/MonedaSimboloGs"
                    android:textColor="@color/textoPrimario"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvFebrero"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Febrero"
                    android:textColor="@color/textoPrimario"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextNumberDecimal2"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:ems="10"
                    android:gravity="right"
                    android:hint="@string/Cero"
                    android:inputType="numberDecimal" />

                <TextView
                    android:id="@+id/tvMonedaSimbolo2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/MonedaSimboloGs"
                    android:textColor="@color/textoPrimario"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Marzo"
                    android:textColor="@color/textoPrimario"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextNumberDecimal3"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:ems="10"
                    android:gravity="right"
                    android:hint="@string/Cero"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal" />

                <TextView
                    android:id="@+id/tvMonedaSimbolo3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/MonedaSimboloGs"
                    android:textColor="@color/textoPrimario"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Abril"
                    android:textColor="@color/textoPrimario"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextNumberDecimal12"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:ems="10"
                    android:gravity="right"
                    android:hint="@string/Cero"
                    android:inputType="numberDecimal" />

                <TextView
                    android:id="@+id/tvMonedaSimbolo4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/MonedaSimboloGs"
                    android:textColor="@color/textoPrimario"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Mayo"
                    android:textColor="@color/textoPrimario"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextNumberDecimal11"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:ems="10"
                    android:gravity="right"
                    android:hint="@string/Cero"
                    android:inputType="numberDecimal" />

                <TextView
                    android:id="@+id/tvMonedaSimbolo5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/MonedaSimboloGs"
                    android:textColor="@color/textoPrimario"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Junio"
                    android:textColor="@color/textoPrimario"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextNumberDecimal10"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:ems="10"
                    android:gravity="right"
                    android:hint="@string/Cero"
                    android:inputType="numberDecimal" />

                <TextView
                    android:id="@+id/tvMonedaSimbolo6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/MonedaSimboloGs"
                    android:textColor="@color/textoPrimario"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Julio"
                    android:textColor="@color/textoPrimario"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextNumberDecimal9"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:ems="10"
                    android:gravity="right"
                    android:hint="@string/Cero"
                    android:inputType="numberDecimal" />

                <TextView
                    android:id="@+id/tvMonedaSimbolo7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/MonedaSimboloGs"
                    android:textColor="@color/textoPrimario"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Agosto"
                    android:textColor="@color/textoPrimario"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextNumberDecimal8"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:ems="10"
                    android:gravity="right"
                    android:hint="@string/Cero"
                    android:inputType="numberDecimal" />

                <TextView
                    android:id="@+id/tvMonedaSimbolo8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/MonedaSimboloGs"
                    android:textColor="@color/textoPrimario"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Septiembre"
                    android:textColor="@color/textoPrimario"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextNumberDecimal4"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:ems="10"
                    android:gravity="right"
                    android:hint="@string/Cero"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal" />

                <TextView
                    android:id="@+id/tvMonedaSimbolo9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/MonedaSimboloGs"
                    android:textColor="@color/textoPrimario"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Octubre"
                    android:textColor="@color/textoPrimario"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextNumberDecimal7"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:ems="10"
                    android:gravity="right"
                    android:hint="@string/Cero"
                    android:inputType="numberDecimal" />

                <TextView
                    android:id="@+id/tvMonedaSimbolo10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/MonedaSimboloGs"
                    android:textColor="@color/textoPrimario"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Noviembre"
                    android:textColor="@color/textoPrimario"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextNumberDecimal6"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:ems="10"
                    android:gravity="right"
                    android:hint="@string/Cero"
                    android:inputType="numberDecimal" />

                <TextView
                    android:id="@+id/tvMonedaSimbolo11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/MonedaSimboloGs"
                    android:textColor="@color/textoPrimario"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Diciembre"
                    android:textColor="@color/textoPrimario"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextNumberDecimal5"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:ems="10"
                    android:gravity="right|end"
                    android:hint="@string/Cero"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal" />

                <TextView
                    android:id="@+id/tvMonedaSimbolo12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/MonedaSimboloGs"
                    android:textColor="@color/textoPrimario"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </TableRow>
        </TableLayout>
    </ScrollView>

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>